--- a/repository.reignaar/_tools/config.ini
+++ b/repository.reignaar/_tools/config.ini
@@ -1,13 +1,13 @@
 [addon]
-name=Your Repository Name
-id=repository.name
+name=Valhalla repository
+id=repository.Valhalla
 version=1.0.0
-author=Your Name
-summary=A short summary of this repository
-description=The description can be longer. Using [CR] you can create a newline. The use of other markup is not advised.
+author=Reignaar
+summary=Repo for my wizard
+description=This repository will house updates and versions of my kodi builds, plus additional maintenance tools.
 
 
 [locations]
-url=https://raw.githubusercontent.com/Your-Github-Username/repository-link/
+url=https://raw.githubusercontent.com/Reignaar/valhalla/repository.reignaar/
 output_path=repo/
 
